rather than mboxo.  Customize `unrmail-mbox-format' to change this.

** Ruby mode

*** New option `ruby-encoding-magic-comment-style'.

*** New option `ruby-custom-encoding-magic-comment-template'.

*** New mode menu.

*** Improved syntax highlighting and indentation.

*** Add more Ruby file types to `auto-mode-alist'.

*** New option `ruby-align-to-stmt-keywords'.

** Search and Replace

*** New global command `M-s .' (`isearch-forward-symbol-at-point')
starts a symbol (identifier) incremental search forward with the
symbol found near point added to the search string initially.

*** `C-x 8 RET' in Isearch mode reads a character by its Unicode name
and adds it to the search string.

*** `M-s i' in Isearch mode toggles the variable `isearch-invisible'
between nil and the value of the option `search-invisible' (or `open'
when it's nil).

*** `query-replace' skips invisible text when `search-invisible' is nil,
and opens overlays with hidden text when `search-invisible' is `open'.

*** A negative prefix arg of replacement commands replaces backward.
`M-- M-%' replaces a string backward, `M-- C-M-%' replaces a regexp
backward, `M-s w words M-- M-%' replaces a sequence of words backward.

+++
*** By default, prefix arguments do not now terminate Isearch mode.
Set `isearch-allow-prefix' to nil to restore old behavior.

*** More Isearch commands accept prefix arguments, namely
`isearch-printing-char', `isearch-quote-char', `isearch-yank-word',
`isearch-yank-line'.

*** Word search now matches whitespace at the beginning/end
of the search string if it contains leading/trailing whitespace.
In an incremental word search or when using a non-nil LAX argument
of `word-search-regexp', the lax matching can also match part of
the first word (in addition to the lax matching of the last word).
The same rules are now applied to the symbol search with the difference
that it matches symbols, and non-symbol characters between symbols.

+++
** SES
